2006-09-30  Brian Warner  <warner@lothar.com>

	* buildbot/changes/p4poller.py (P4Source): some minor stylistic
	changes: set self.loop in __init__, remove unused volatile=

	* docs/buildbot.texinfo (.buildbot config directory): add more
	docs on the .buildbot/options keys used by "buildbot try"
	* buildbot/scripts/tryclient.py (Try.createJob): remove dead code
	(Try.deliverJob): same

	* buildbot/changes/bonsaipoller.py (BonsaiParser): more updates
	from Robert Helmer
	(BonsaiPoller): same

	* buildbot/slave/commands.py (LogFileWatcher.stop): explicitly
	close the filehandle when we stop watching the file. Before, the
	filehandle was only closed when the LogFileWatcher was
	garbage-collected, which could be quite a while in the future. If
	it was still open by the time the next build started, windows will
	refuse to let the new build delete the old build/ directory. Fixes
	SF#1568415, thanks to <scmikes>, <FireMoth>, and <radix> on
	#twisted for the catch.

2006-09-29  Brian Warner  <warner@lothar.com>

	* buildbot/status/tinderbox.py (TinderboxMailNotifier): updates
	from Robert Helmer

2006-09-25  Brian Warner  <warner@lothar.com>

	* setup.py: the new buildbot.steps module wasn't being installed.
	Thanks to Jose Dapena Paz for the catch, fixes SF#1560631.
	(testmsgs): add the extra stuff from buildbot/test/* so you can
	run unit tests on an installed copy of buildbot, not just from
	the source tree.

	* contrib/svn_buildbot.py (ChangeSender.getChanges): the first *4*
	columns of 'svnlook changed' output contain status information, so
	strip [:4] instead of [:6]. Depending upon what the status flags
	were, this would sometimes lead to mangled filenames. Thanks to
	Riccardo Magliocchetti for the patch. Closes SF#1545146.

	* buildbot/steps/source.py (Monotone): initial Monotone support,
	contributed by Nathaniel Smith. Still needs docs and tests, but
	this code has been in use on the Monotone buildbot for a long
	time now.